[package]
name = "pilf_buddy_alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.10"
pi_pointer = { git = "https://github.com/AsyncModules/pi_pointer.git", version = "0.1.2" }
crate_interface = "0.1"

[dev-dependencies]
criterion = "0.5.1"
ctor = "0.4.2"
rand = "0.9.1"
rand_chacha = "0.9.0"

[[bench]]
name = "allocator_bench"
harness = false
